--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         <legend class="r">Information de règlement</legend>
         <ol>
           <li><label>Type de carte bancaire : </label><br />
-            <input type="radio" name="cb" value="VISA" id="visa">
+            <input type="radio" name="cb" value="VISA" id="visa" />
             <label for="visa" class="inline">VISA</label><br />
-            <input type="radio" name="cb" value="Mastercard" id="mastercard">
+            <input type="radio" name="cb" value="Mastercard" id="mastercard" />
             <label for="visa" class="inline">Mastercard</label>
           </li>
           <li><label>Numéro de carte : </label><input type="text" name="nc" placeholder="Numéro de carte" /></li>
@@ -37,7 +37,7 @@
           <li><label>Nom de titulaire : </label><input type="text" name="nt" placeholder="Nom du titulaire" /></li>
         </ol>
       </fieldset>
-      <input type="submit" name="Buying" value="J'achète !"  />
+      <input type="submit" name="Buying" value="J'achète !" class="b" />
     </form>
   </body>
 </html>
