--- a/index.html
+++ b/index.html
@@ -7,37 +7,39 @@
   </head>
   <body>
     <form method="post">
-      <fieldset class="idf">
-        <legend class="idf">Votre identité</legend>
+      <fieldset class="identity">
+        <legend class="identity">Votre identité</legend>
         <ol>
-          <li><label>Nom : </label><input type="text" name="nom" placeholder="Nom" /></li>
-          <li><label>Prénom : </label><input type="text" name="prénom" placeholder="Prénom" /></li>
-          <li><label>Adresse mail : </label><input type="text" name="adesse mail"placeholder="Adresse mail" /></li>
+          <li><label for="familyname">Nom : </label><input type="text" name="familyname" id="firstname" placeholder="Nom" /></li>
+          <li><label for="name">Prénom : </label><input type="text" name="name" id="name" placeholder="Prénom" /></li>
+          <li><label for="email">Adresse mail : </label><input type="email" name="email" id="email" placeholder="Adresse mail" /></li>
         </ol>
       </fieldset>
-      <fieldset class="adf">
-        <legend class="adf">Adresse de livraison</legend>
+      <fieldset class="delivery">
+        <legend class="delivery">Adresse de livraison</legend>
         <ol>
-          <li><label>Adresse : </label><textarea name="adresse" id="adresse"cols="40" rows="4"></textarea></li>
-          <li><label>Code postal : </label><input type="text" name="code" placeholder="Code postal" /></li>
-          <li><label>Ville : </label><input type="text" name="ville" placeholder="Ville" /></li>
+          <li><label for="address">Adresse : </label><textarea name="address" id="address" cols="40" rows="8"></textarea></li>
+          <li><label for="postalCode">Code postal : </label><input type="text" name="postalCode" id="postalCode" placeholder="Code postal" /></li>
+          <li><label for="city">Ville : </label><input type="text" name="city" id="city" placeholder="Ville" /></li>
         </ol>
       </fieldset>
-      <fieldset class="r">
-        <legend class="r">Information de règlement</legend>
+      <fieldset class="payment">
+        <legend class="payment">Information de règlement</legend>
         <ol>
-          <li><label>Type de carte bancaire : </label><br />
-            <input type="radio" name="cb" value="VISA" id="visa" />
-            <label for="visa" class="inline">VISA</label><br />
-            <input type="radio" name="cb" value="Mastercard" id="mastercard" />
-            <label for="visa" class="inline">Mastercard</label>
+          <li><label>Type de carte bancaire : </label>
+            <ul>
+              <li><input type="radio" name="creditCard[]" value="VISA" id="visa" />
+                  <label for="visa" class="inline">VISA</label></li>
+              <li><input type="radio" name="creditCard[]" value="Mastercard" id="mastercard" />
+                  <label for="mastercard" class="inline">Mastercard</label></li>
+            </ul>
           </li>
-          <li><label>Numéro de carte : </label><input type="text" name="nc" placeholder="Numéro de carte" /></li>
-          <li><label>Code de sécurité : </label><input type="text" name="cs" placeholder="Code de sécurité" /></li>
-          <li><label>Nom de titulaire : </label><input type="text" name="nt" placeholder="Nom du titulaire" /></li>
+          <li><label for="cardNumber">Numéro de carte : </label><input type="text" name="cardNumber" placeholder="Numéro de carte" /></li>
+          <li><label for="securityCode">Code de sécurité : </label><input type="text" name="securityCode" placeholder="Code de sécurité" /></li>
+          <li><label for="cardHolder">Nom de titulaire : </label><input type="text" name="cardHolder" placeholder="Nom du titulaire" /></li>
         </ol>
       </fieldset>
-      <input type="submit" name="Buying" value="J'achète !" class="b" />
+      <input type="submit" name="buying" value="J'achète !" class="b" />
     </form>
   </body>
 </html>
